objects/CSS_Remote_Connection__c.object
<CustomObject>
    <description>This object stores application integration details.</description>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>This field is the name of the integrating application</description>
        <label>Application Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <description>This field stores the application URL for integration</description>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <description>This field stores the callback URL to integrating application</description>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <description>This field is a picklist which distinguishes if the integration is a UI related or backend application integration</description>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>UI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password1__c</fullName>
        <description>Stores encrypted password</description>
        <label>Password1</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Password2__c</fullName>
        <description>Stores password in encrypted form</description>
        <label>Password2</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>CSS_RemoteConnection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS_Remote_Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_RemoteConnections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>